The sculpt option "show diffuse color" + dyntopo doesn't work. #39520

Closed
opened 2014-03-30 18:55:29 +02:00 by Dan JR · 10 comments

System Information
W7 SP1 x64 - Nvidia Quadro FX1800
Operating system and graphics card

Blender 2.70

Short description of error
"Show diffuse color" is not displayed with dyntopo.

Exact steps for others to reproduce the error

  • change to Sculpt mode;
  • change the color of the diffuse material;
  • enable "show diffuse color" in options tab;
  • enable "dynamic topology" in Tools tab.
**System Information** W7 SP1 x64 - Nvidia Quadro FX1800 Operating system and graphics card **Blender 2.70** **Short description of error** "Show diffuse color" is not displayed with dyntopo. **Exact steps for others to reproduce the error** - change to Sculpt mode; - change the color of the diffuse material; - enable "show diffuse color" in options tab; - enable "dynamic topology" in Tools tab.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @DaniloJunior

Added subscriber: @DaniloJunior

#39517 was marked as duplicate of this issue

#39517 was marked as duplicate of this issue

◀ Merged tasks: #39517.

◀ Merged tasks: #39517.
Antonis Ryakiotakis was assigned by Bastien Montagne 2014-03-30 19:14:46 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

Not sure this is a bug? Antony will know! :)

Not sure this is a bug? Antony will know! :)

This issue was referenced by blender/blender-addons-contrib@8c730b1059

This issue was referenced by blender/blender-addons-contrib@8c730b1059032f45da06c278715909b71009909c

This issue was referenced by 8c730b1059

This issue was referenced by 8c730b1059032f45da06c278715909b71009909c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 8c730b1059.

Closed by commit 8c730b1059.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39520
No description provided.